style.css
/* ... */
h3 {
	font-size: 15px;
	text-transform: uppercase;
	font-weight: 700;
	color: #333333;
}

.med-width-whitespace {
	max-width: 800px;
	margin: auto auto auto auto;
	box-shadow: 0px 0px 0px #000000;
}

h1 {
	color: #333333;
}

h4 {
	color: #333333;
}

.icons {
	margin-bottom: 14px;
	margin-top: 24px;
}

.white {
	color: #ffffff;
}

.portfolio-thumb {
	margin-bottom: 24px;
}

.portfolio-row {
	margin-bottom: 44px;
	margin-top: 50px;
}

.avatar {
	box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
}

.black-background {
	background-color: rgba(165, 147, 99, 0.85);
	padding: 40px 40px 40px 40px;
}

.bold-link {
	font-weight: 900;
	text-decoration: underline;
}

.bgc-white {
	background-color: #ffffff;
}

.bgc-dark-slate-blue {
	background-color: #364577;
}

.bgc-atomic-tangerine {
	background-color: #bf5921;
}

.tc-white {
	color: #bf5921;
}

.btn-atomic-tangerine {
	background: #bf5921;
	color: #ffffff;
}

.btn-atomic-tangerine:hover {
	background: #c27956;
	color: #ffffff;
}

.ltc-white {
	color: #ffffff;
}

.ltc-white:hover {
	color: #cccccc;
}

.ltc-atomic-tangerine {
	color: #bf5921;
}

.ltc-atomic-tangerine:hover {
	color: #c27956;
}

.icon-dark-slate-blue {
	color: #364577;
	border-color: #364577;
}

.bg-dots-bg {
	background-image: url("img/dots-bg.png");
}

.bg-lines-h2-bg {
	background-image: url("img/lines-h2-bg.png");
}

.bg-banniere {
	background-image: url("img/agence-la-panthere.jpg");
}

.bg-presentation {
	background-image: url("img/image-de-presentation.jpg");
}

@media (max-width: 1024px) {
	.bloc {
		padding-left: 20px;
		padding-right: 20px;
	}
	.bloc.full-width-bloc,
	.bloc-tile-2.full-width-bloc .container,
	.bloc-tile-3.full-width-bloc .container,
	.bloc-tile-4.full-width-bloc .container {
		padding-left: 0;
		padding-right: 0;
	}
}

@media (max-width: 992px) and (min-width: 768px) {
	.navbar .nav {
		max-width: 80%;
	}
	.nav-center.navbar .nav {
		max-width: 100%;
	}
}

@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
	.b-parallax {
		background-attachment: scroll;
	}
}

@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
	.b-parallax {
		background-attachment: scroll;
	}
}

@media (max-width: 991px) {
	.container {
		width: 100%;
	}
	.b-parallax {
		background-attachment: scroll;
	}
	.page-container,
	#hero-bloc {
		overflow-x: hidden;
		position: relative;
	}
	.bloc {
		padding-left: 0;
		padding-right: 0;
	}
	.bloc-group,
	.bloc-group .bloc {
		display: block;
		width: 100%;
	}
	.bloc-fill-screen .fill-bloc-top-edge,
	.bloc-fill-screen .fill-bloc-bottom-edge {
		padding: 0 20px;
		padding-left: 0;
		padding-right: 0;
	}
}

@media (max-width: 767px) {
	.page-container {
		overflow-x: hidden;
		position: relative;
	}
	h1,
	h2,
	h3,
	h4,
	h5,
	h6,
	p,
	#disqus_thread {
		padding-left: 10px;
		padding-right: 10px;
	}
	.b-parallax {
		background-attachment: scroll;
	}
	.navbar .nav {
		padding-top: 0;
		border-top: 1px solid rgba(0, 0, 0, 0.2);
		float: none;
	}
	.navbar.row {
		margin-left: 0;
		margin-right: 0;
	}
	.site-navigation {
		position: inherit;
		transform: none;
		-webkit-transform: none;
		-ms-transform: none;
	}
	.nav > li {
		margin-top: 0;
		border-bottom: 1px solid rgba(0, 0, 0, 0.1);
		background: rgba(0, 0, 0, 0.05);
		text-align: left;
		padding-left: 15px;
		width: 100%;
	}
	.nav > li:hover {
		background: rgba(0, 0, 0, 0.08);
	}
	.dropdown .dropdown a .caret {
		float: none;
		margin: 5px 0 0 10px;
		border: 4px solid black;
		border-bottom-color: transparent;
		border-right-color: transparent;
		border-left-color: transparent;
	}
	#hero-bloc .navbar .nav {
		background: rgba(0, 0, 0, 0.8);
	}
	#hero-bloc .navbar .nav a {
		color: rgba(255, 255, 255, 0.6);
	}
	.hero {
		padding: 50px 0;
	}
	.hero-nav {
		left: -1px;
		right: -1px;
	}
	.navbar-collapse {
		padding: 0;
		overflow-x: hidden;
		-webkit-box-shadow: none;
		box-shadow: none;
	}
	.navbar-brand img {
		max-height: 40px;
		width: auto;
	}
	.nav-invert .navbar-header {
		float: none;
		width: 100%;
	}
	.nav-invert .navbar-toggle {
		float: left;
		margin-left: 10px;
	}
	.bloc {
		padding-left: 0;
		padding-right: 0;
	}
	.bloc-xxl,
	.bloc-xl,
	.bloc-lg {
		padding: 40px 0;
	}
	.bloc-sm,
	.bloc-md {
		padding-left: 0;
		padding-right: 0;
	}
	.bloc-tile-2 .container,
	.bloc-tile-3 .container,
	.bloc-tile-4 .container,
	.bloc-fill-screen .fill-bloc-top-edge,
	.bloc-fill-screen .fill-bloc-bottom-edge {
		padding-left: 0;
		padding-right: 0;
	}
	.a-block {
		padding: 0 10px;
	}
	.btn-dwn {
		display: none;
	}
	.voffset {
		margin-top: 5px;
	}
	.voffset-md {
		margin-top: 20px;
	}
	.voffset-lg {
		margin-top: 30px;
	}
	form {
		padding: 5px;
	}
	.close-lightbox {
		display: inline-block;
	}
	.blocsapp-device-iphone5 {
		background-size: 216px 425px;
		padding-top: 60px;
		width: 216px;
		height: 425px;
	}
	.blocsapp-device-iphone5 img {
		width: 180px;
		height: 320px;
	}
}

@media (max-width: 400px) {
	.bloc {
		padding-left: 0;
		padding-right: 0;
	}
}

@media (max-width: 767px) {
	.bloc-mob-center-text {
		text-align: center;
	}
}

